--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,11 @@
             <version>2.7.6</version>
         </dependency>
         <!-- 必须引入的包 ShardingSphere -->
-        <dependency>
+      <!--  <dependency>
             <groupId>org.apache.shardingsphere</groupId>
             <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
             <version>5.2.0</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
