--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
   redis:
     port: 6379
     host: 8.142.153.195
+    password: root
     jedis:
       pool:
         max-active: 30
@@ -35,7 +36,7 @@ spring:
   datasource:
     url: jdbc:mysql://8.142.153.195:3306/day_test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
-    password: guojunwen111@126.com
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 #  shardingsphere:
