--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
     </parent>
 
 
-
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -30,11 +29,11 @@
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
             <version>2.2.10.RELEASE</version>
         </dependency>
-   <!--     <dependency>
-            <groupId>com.netflix.hystrix</groupId>
-            <artifactId>hystrix-javanica</artifactId>
-            <version>1.5.18</version>
-        </dependency>-->
+        <!--     <dependency>
+                 <groupId>com.netflix.hystrix</groupId>
+                 <artifactId>hystrix-javanica</artifactId>
+                 <version>1.5.18</version>
+             </dependency>-->
 
         <dependency>
             <groupId>com.xiaoju.uemc.tinyid</groupId>
@@ -57,26 +56,26 @@
             <version>2.7.6</version>
         </dependency>
         <!-- 必须引入的包 ShardingSphere -->
-      <!--  <dependency>
-            <groupId>org.apache.shardingsphere</groupId>
-            <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
-            <version>5.2.0</version>
-        </dependency>-->
+        <!--  <dependency>
+              <groupId>org.apache.shardingsphere</groupId>
+              <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
+              <version>5.2.0</version>
+          </dependency>-->
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
             <version>3.3.6</version>
         </dependency>
-       <!-- <dependency>
-            <groupId>org.apache.shardingsphere</groupId>
-            <artifactId>shardingsphere-jdbc-core</artifactId>
-            <version>5.0.0-alpha</version>
-        </dependency>
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>3.4.1</version>
-        </dependency>-->
+        <!-- <dependency>
+             <groupId>org.apache.shardingsphere</groupId>
+             <artifactId>shardingsphere-jdbc-core</artifactId>
+             <version>5.0.0-alpha</version>
+         </dependency>
+         <dependency>
+             <groupId>com.zaxxer</groupId>
+             <artifactId>HikariCP</artifactId>
+             <version>3.4.1</version>
+         </dependency>-->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -178,15 +177,33 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.83</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
-    <pluginManagement>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>2.3.1.RELEASE</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.1.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
@@ -196,6 +213,5 @@
                 </executions>
             </plugin>
         </plugins>
-    </pluginManagement>
     </build>
 </project>
