--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.25.0-GA</version>
+        </dependency>
+
         <!-- Hystrix -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
