--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   redis:
     port: 6379
     host: 8.142.153.195
-    password: root
+    password: guojunwen111@126.com
     jedis:
       pool:
         max-active: 30
@@ -23,9 +23,9 @@ spring:
         max-idle: 8
 
 # Elasticsearch配置
-  elasticsearch:
-    rest:
-      uris: http://127.0.0.1:9200
+#  elasticsearch:
+#    rest:
+#      uris: http://127.0.0.1:9200
   data:
     elasticsearch:
       repositories:
@@ -36,7 +36,7 @@ spring:
   datasource:
     url: jdbc:mysql://8.142.153.195:3306/day_test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
-    password: root
+    password: guojunwen111@126.com
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 #  shardingsphere:
